[package]
name = "merezhka"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.83"
console_error_panic_hook = "0.1.7"
futures-concurrency = "7.6.0"
gloo-net = { version = "0.5.0", features = ["json"] }
leptos = { version = "0.6.11", features = ["csr"] }
leptos_router = { version = "0.6.11", features = ["csr"] }
serde = { version = "1.0.201", features = ["derive"] }
url = "2.5.0"
wasm-logger = "0.2.0"

[profile.release]
lto = true
opt-level = "z"
